新增自定义聊天页路径功能

--- a/templates/admin_settings.html
+++ b/templates/admin_settings.html
@@ -206,6 +206,13 @@
                     </div>
                 </div>
                 
+                <div class="setting-item">
+                    <div class="setting-label">聊天窗口路径</div>
+                    <div class="setting-control">
+                        <input type="text" name="chat_path" value="{{ chat_path }}" style="width: 200px; padding: 8px; border: 1px solid #d9d9d9; border-radius: 4px; font-size: 14px;" placeholder="/">
+                    </div>
+                </div>
+                
                 <button type="submit" class="save-button">保存设置</button>
             </form>
         </div>
